Update example tutorial

--- a/notebooks/Example time series generation.ipynb
+++ b/notebooks/Example time series generation.ipynb
@@ -18,8 +18,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "# The file \"two_axis_shading_functions_v2.py\" has to be located in the working directory\n",
-    "# The following libraries are not standard and has to be installed seperately\n",
+    "# The following libraries are not standard and has to be installed seperately.\n",
+    "# It is recommended to install shapely using conda.\n",
     "import pvlib\n",
     "from shapely import geometry"
    ]
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to import the shading functions from the file \"two_axis_shading_functions_v2.py\", the file has to be located in the current working directory. Therefore, before loading the module the current working directory should be changed to the correct folder:"
+    "In order to import the shading functions from the file *\"two_axis_tracker_shading.py\"*, the file has to be located in the current working directory. Therefore, before loading the module the current working directory should be changed to the correct folder:"
    ]
   },
   {
@@ -38,15 +38,17 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('C:/Users/arajen/Desktop/DTU/Projects/Heliac v2/Shading/')\n",
-    "import two_axis_shading_functions_v2 as shading"
+    "os.chdir('C:/users/arajen/documents/github/twoaxistracking/')\n",
+    "import two_axis_tracker_shading as shading"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first step is to define the location/site for where shading is to be calculated. The location is used to determine the solar position in the next steps."
+    "<br>\n",
+    "\n",
+    "Now, the first step is to define the location/site for where shading is to be calculated. The location is used to determine the solar position in the next steps."
    ]
   },
   {
@@ -97,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, the solar position is calculated from the location for each of the time periods:"
+    "Next, the solar position is calculated from the location for each of the time periods using the `pvlib` package:"
    ]
   },
   {
@@ -231,7 +233,7 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-3.07638 -1.7653800000000002 6.15276 3.5307600000000003\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.12305519999999999\" opacity=\"0.6\" d=\"M 2.8485,-1.5375 L 2.8485,1.5375 L -2.8485,1.5375 L -2.8485,-1.5375 L 2.8485,-1.5375 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1ee0f95e580>"
+       "<shapely.geometry.polygon.Polygon at 0x1f45946bb20>"
       ]
      },
      "execution_count": 6,
@@ -240,6 +242,7 @@
     }
    ],
    "source": [
+    "# Change these parameters to suit your particular collector aperture\n",
     "collector_width = 5.697\n",
     "collector_height = 3.075\n",
     "\n",
@@ -249,6 +252,10 @@
     "    collector_width/2,  # top y-coordinate\n",
     "    collector_height/2)  # right x-coordinate\n",
     "\n",
+    "# Example of how to define a circular collector aperture\n",
+    "# centered at the origin (0,0) with a radius of 2\n",
+    "# collector_geometry = geometry.Point(0,0).buffer(2)\n",
+    "\n",
     "collector_geometry"
    ]
   },
@@ -256,6 +263,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note, the absolute dimensions do not matter, as the GCR scales the distance between collectors according to the collector area.\n",
+    "\n",
+    "<br>\n",
+    "\n",
     "Derive properties from the defined collector geometry:"
    ]
   },
@@ -285,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define field layout\n",
+    "## Field layout definition\n",
     "\n",
     "Once the colelctor aperture has been determined, the following step is to define the field layout. It is important to specify the ground cover ratio (GCR), which is the ratio of the collector are to the ground area.\n",
     "\n",
@@ -293,9 +304,9 @@
     "The nighbor order determines how many collectors to take into account, for a neighbor order of 1 the immidiate 8 collectors are considered, whereas for a neighbor order of 2, 24 shading collector are considered. It is recommended to use a neighbor order of 2.\n",
     "\n",
     "#### Standard vs. custom field layouts\n",
-    "It is possible to choose from four different standard field layouts: square, square-rotated (diagonal), hexagon E-W, and hexagon N-S.\n",
+    "It is possible to choose from four different standard field layouts: `square`, `diagonal`, `hexagon_e_w`, and `hexagon_n_s`.\n",
     "\n",
-    "It is also possible to specify a custom layout using the keywords: `aspect ratio`, `offset`, `rotation`, and `gcr`."
+    "It is also possible to specify a custom layout using the keywords: `aspect ratio`, `offset`, `rotation`, and `gcr`. For documentation of the layout parameters, see the paper by [Cumpston and Pye (2014)](https://doi.org/10.1016/j.solener.2014.06.012) or check out the function documentation."
    ]
   },
   {
@@ -319,11 +330,11 @@
    "source": [
     "X, Y, tracker_distance, relative_azimuth = \\\n",
     "    shading.generate_field_layout(\n",
-    "        gcr=0.3,\n",
+    "        gcr=0.3,  # Change this parameter according to your desired collector density\n",
     "        neighbor_order=2,\n",
     "        layout_type='square',\n",
-    "        L_min=L_min,  # calculate from geometry - do not change\n",
-    "        collector_area=collector_area,  # calculate from geometry - do not change\n",
+    "        L_min=L_min,  # calculated from collector geometry - do not change\n",
+    "        collector_area=collector_area,  # calculated from collector geometry - do not change\n",
     "        plot=True)"
    ]
   },
@@ -333,7 +344,7 @@
    "source": [
     "## Calculate shading fraction\n",
     "\n",
-    "Now all the settings have been finalized and it's time to do the actual shading calculations. This step might take some time (5-60 sec.) depdening on the time step and neighbor order."
+    "Now that all collector geometry and field layout have been defined, it is time to do the actual shading calculations. This step might take some time (5 sec. - 3 min.) depdening on the time step and neighbor order."
    ]
   },
   {
@@ -345,7 +356,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 10.5 s\n"
+      "Wall time: 10.9 s\n"
      ]
     }
    ],
@@ -367,7 +378,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the shading fraction"
+    "## Visualize the shading fraction\n",
+    "\n",
+    "Plot the shading fraction for one example day:"
    ]
   },
   {
@@ -399,7 +412,16 @@
     }
    ],
    "source": [
-    "df[['shading_fraction','elevation']].iloc[:24*4].plot(subplots=True)"
+    "df[['shading_fraction','elevation']].iloc[:96].plot(subplots=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "Visualize the average daily shading fraction:"
    ]
   },
   {
@@ -449,11 +471,13 @@
    "source": [
     "columns_to_save = ['shading_fraction', 'azimuth', 'apparent_zenith']\n",
     "\n",
+    "df.loc[df['shading_fraction'].isna(), 'shading_fraction'] = 1\n",
+    "\n",
     "filename = 'test_file.csv'\n",
     "\n",
-    "# Use tab seperator as this is the easisets to work with in TRNSYS\n",
+    "# Export the data to a tab seperated ('\\t') csv file \n",
     "# Represent nan values in shading fraction as 1\n",
-    "df[columns_to_save].to_csv(filename, sep='\\t', index=False, na_rep=1)"
+    "df[columns_to_save].to_csv(filename, sep='\\t', index=False)"
    ]
   },
   {
