Update Example time series generation.ipynb

--- a/notebooks/Example time series generation.ipynb
+++ b/notebooks/Example time series generation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Self-shading of two-axis tracking collectors\n",
+    "# Calculation of self-shading in fields of two-axis trackers\n",
     "\n",
     "This document explains how to use the open-source code developed Adam R. Jensen for calculating self-shading of two-axis tracking solar collectors.\n",
     "\n",
