Change elevation to altitude in pvlib.location

--- a/notebooks/Barstow_data.ipynb
+++ b/notebooks/Barstow_data.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "barstow = pvlib.location.Location(latitude=34.88, longitude=-117.00, elevation=664, name='Barstow', tz='Etc/GMT+8')"
+    "barstow = pvlib.location.Location(latitude=34.88, longitude=-117.00, altitude=664, name='Barstow', tz='Etc/GMT+8')"
    ]
   },
   {
