--- a/notebooks/numerical_simulations.ipynb
+++ b/notebooks/numerical_simulations.ipynb
@@ -6,14 +6,14 @@
    "source": [
     "# Numerical investigation of self-shading\n",
     "\n",
-    "This document explains how to \n",
+    "This notebook demonstrates how to uniformly discretize the field layout parameters.\n",
     "\n",
     "Import necessary packages:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,32 +30,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to import the shading functions from the file *\"two_axis_tracker_shading.py\"*, the file has to be located in the current working directory. Therefore, before loading the module the current working directory should be changed to the correct folder:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.chdir('C:/users/arajen/documents/github/twoaxistracking/')\n",
-    "import two_axis_tracker_shading as shading"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Define collector aperture area\n",
     "\n",
-    "For this example case, we define the aperture geometry to be a square:"
+    "First, it is necessary to define the collector aperture, as this determines the feasible range for ground cover ratios and aspect ratios. \n",
+    "\n",
+    "This example will be based on a square collector aperture, as defined here (other geometries are easily defined using shapely):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,10 +56,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.54 -0.54 1.08 1.08\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.0216\" opacity=\"0.6\" d=\"M 0.5,-0.5 L 0.5,0.5 L -0.5,0.5 L -0.5,-0.5 L 0.5,-0.5 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x145ce636dc0>"
+       "<shapely.geometry.polygon.Polygon at 0x23c12868fd0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,6 +67,8 @@
    "source": [
     "collector_geometry = geometry.box(-0.5, -0.5, 0.5, 0.5)\n",
     "collector_area = collector_geometry.area\n",
+    "\n",
+    "# Calculate the minimum distance between trackers (L_min) - also called D_min\n",
     "L_min = 2*collector_geometry.hausdorff_distance(geometry.Point(0, 0))\n",
     "\n",
     "print(\"Collector area: %2.1f\"% collector_area)\n",
@@ -95,23 +81,30 @@
    "metadata": {},
    "source": [
     "## Determine discrete simulation layouts\n",
-    "\n"
+    "The second step is to define the discrete GCRs to simulate and the step size for the discretization of the aspect ratios, offsets, and rotations.\n",
+    "\n",
+    "The discretization assumes that the parameters are simulated for the entire range, i.e., aspect ratios: [0.866, GCR<sub> max</sub> ], rotations: [0, 180), and offsets: [-0.5, 0.5]."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Determine range of gcrs\n",
     "gcr_step = 0.05\n",
     "gcr_start = 0.1\n",
-    "aspect_ratio_step = 0.05\n",
-    "rotation_step = 5\n",
-    "offset_step = 0.05\n",
-    "\n",
+    "# The max. GCR depends on the \n",
     "gcr_max = collector_area / (L_min**2 * np.sqrt(1-(-0.5)**2))\n",
-    "gcrs = np.round(np.hstack([np.arange(gcr_start, gcr_max, gcr_step), gcr_max]), 3)  # probably should be floor\n",
+    "gcrs = np.round(np.hstack([np.arange(gcr_start, gcr_max, gcr_step), gcr_max]), 3)\n",
+    "\n",
+    "# Determine step size for aspect ratio, offset, and rotation\n",
+    "aspect_ratio_step = 0.05\n",
+    "offset_step = 0.05\n",
+    "rotation_step = 5\n",
+    "\n",
+    "# Calculate \n",
     "rotations = np.arange(0, 180, rotation_step)\n",
     "offsets = np.arange(-0.5, 0.5+offset_step, offset_step)"
    ]
@@ -120,14 +113,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generate a dataframe of unique discrete layouts, based on the range and step size of the layout parameters:"
+    "<br>\n",
+    "\n",
+    "Generate a dataframe of unique feasible discrete layouts, based on the range and step size of the layout parameters:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique layouts: 174960\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -204,7 +206,7 @@
        "4  0.1      1.050000    -0.5         0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,26 +232,22 @@
     "\n",
     "layouts = pd.DataFrame(parameters,\n",
     "                       columns=['gcr', 'aspect_ratio', 'offset', 'rotation'])\n",
+    "\n",
+    "print(f\"Number of unique layouts: {layouts.shape[0]}\")\n",
     "layouts.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualization of layout discretization"
+    "### Visualization of layout discretization\n",
+    "The following plots illustrate the discrete aspect ratio and offsets for GCR=0.2 and GCR=0.3."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -289,11 +287,6 @@
     "\n",
     "fig.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
