Improve description in numerical_simulations notebook

--- a/notebooks/numerical_simulations.ipynb
+++ b/notebooks/numerical_simulations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
    "source": [
     "## Define collector aperture area\n",
     "\n",
-    "First, it is necessary to define the collector aperture, as this determines the feasible range for ground cover ratios and aspect ratios. \n",
+    "First, it is necessary to define the collector aperture, as this determines the feasible range of ground cover ratios and aspect ratios. \n",
     "\n",
-    "This example will be based on a square collector aperture, as defined here (other geometries are easily defined using shapely):"
+    "This example will be based on a square collector aperture, as defined below (other geometries are easily defined using shapely):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,15 +56,16 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.54 -0.54 1.08 1.08\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.0216\" opacity=\"0.6\" d=\"M 0.5,-0.5 L 0.5,0.5 L -0.5,0.5 L -0.5,-0.5 L 0.5,-0.5 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x23c12868fd0>"
+       "<shapely.geometry.polygon.Polygon at 0x28aed11d160>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Definition of aperture geometry using shapely\n",
     "collector_geometry = geometry.box(-0.5, -0.5, 0.5, 0.5)\n",
     "collector_area = collector_geometry.area\n",
     "\n",
@@ -88,23 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Determine range of gcrs\n",
     "gcr_step = 0.05\n",
     "gcr_start = 0.1\n",
-    "# The max. GCR depends on the \n",
+    "# The maximum GCR depends on the collector aperture geometry\n",
     "gcr_max = collector_area / (L_min**2 * np.sqrt(1-(-0.5)**2))\n",
     "gcrs = np.round(np.hstack([np.arange(gcr_start, gcr_max, gcr_step), gcr_max]), 3)\n",
     "\n",
-    "# Determine step size for aspect ratio, offset, and rotation\n",
+    "# Determine step size for discretization of the aspect ratio, offset, and rotation\n",
     "aspect_ratio_step = 0.05\n",
     "offset_step = 0.05\n",
     "rotation_step = 5\n",
     "\n",
-    "# Calculate \n",
+    "# Calculate discrete rotations and offsets\n",
     "rotations = np.arange(0, 180, rotation_step)\n",
     "offsets = np.arange(-0.5, 0.5+offset_step, offset_step)"
    ]
@@ -115,12 +116,12 @@
    "source": [
     "<br>\n",
     "\n",
-    "Generate a dataframe of unique feasible discrete layouts, based on the range and step size of the layout parameters:"
+    "Generate a dataframe of unique feasible discrete layouts:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +207,7 @@
        "4  0.1      1.050000    -0.5         0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,12 +243,12 @@
    "metadata": {},
    "source": [
     "### Visualization of layout discretization\n",
-    "The following plots illustrate the discrete aspect ratio and offsets for GCR=0.2 and GCR=0.3."
+    "The following plots illustrate the discrete aspect ratios and offsets for GCR=0.2 and GCR=0.3. Note, each point shown is simulated for the all discrete rotations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -287,13 +288,6 @@
     "\n",
     "fig.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
