--- a/docs/source/notebooks/Example time series generation.ipynb
+++ b/docs/source/notebooks/Example time series generation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calculation of self-shading in fields of two-axis trackers\n",
+    "# User guide\n",
     "\n",
     "This document explains how to use the open-source code provided in this repository for calculating self-shading of two-axis tracking solar collectors.\n",
     "\n",
@@ -13,7 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('C:/Users/arajen/Documents/GitHub/twoaxistracking/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,25 +35,8 @@
     "# The following libraries are not standard and have to be installed seperately.\n",
     "# It is recommended to install shapely using conda.\n",
     "import pvlib\n",
-    "from shapely import geometry"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In order to import the shading functions from the file *two_axis_tracker_shading.py*, the file has to be located in the current working directory. Therefore, before loading the module the current working directory should be changed to the correct folder:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.chdir('C:/users/arajen/documents/github/twoaxistracking/')\n",
-    "import two_axis_tracker_shading as shading"
+    "from shapely import geometry\n",
+    "import two_axis_tracker_shading"
    ]
   },
   {
@@ -53,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +190,7 @@
        "2019-01-01 01:00:00+00:00 -52.491152  42.334286         -3.215687  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +198,7 @@
    "source": [
     "df = location.get_solarposition(times)\n",
     "\n",
-    "df.head()  # Print the first 5 lines"
+    "df.head()  # Show the first 5 lines"
    ]
   },
   {
@@ -215,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -224,10 +221,10 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-3.07638 -1.7653800000000002 6.15276 3.5307600000000003\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.12305519999999999\" opacity=\"0.6\" d=\"M 2.8485,-1.5375 L 2.8485,1.5375 L -2.8485,1.5375 L -2.8485,-1.5375 L 2.8485,-1.5375 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x16d4096ca00>"
+       "<shapely.geometry.polygon.Polygon at 0x2de27d69130>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,10 +240,6 @@
     "    collector_width/2,  # top y-coordinate\n",
     "    collector_height/2)  # right x-coordinate\n",
     "\n",
-    "# Example of how to define a circular collector aperture\n",
-    "# centered at the origin (0,0) with a radius of 2\n",
-    "# collector_geometry = geometry.Point(0, 0).buffer(2)\n",
-    "\n",
     "collector_geometry"
    ]
   },
@@ -254,6 +247,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Similarly, a cirular geometry can be defined as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-2.16 -2.16 4.32 4.32\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.0864\" opacity=\"0.6\" d=\"M 2.0,0.0 L 1.9903694533443939,-0.196034280659121 L 1.961570560806461,-0.39018064403225616 L 1.9138806714644179,-0.5805693545089242 L 1.847759065022574,-0.7653668647301788 L 1.7638425286967105,-0.9427934736519944 L 1.6629392246050911,-1.1111404660392035 L 1.5460209067254749,-1.2687865683272899 L 1.4142135623730963,-1.4142135623730938 L 1.2687865683272923,-1.5460209067254727 L 1.1111404660392061,-1.6629392246050894 L 0.9427934736519972,-1.763842528696709 L 0.7653668647301817,-1.8477590650225726 L 0.5805693545089272,-1.913880671464417 L 0.39018064403225927,-1.9615705608064604 L 0.19603428065912418,-1.9903694533443934 L 3.2310891488651735e-15,-2.0 L -0.19603428065911777,-1.990369453344394 L -0.39018064403225294,-1.9615705608064615 L -0.580569354508921,-1.913880671464419 L -0.7653668647301757,-1.847759065022575 L -0.9427934736519914,-1.763842528696712 L -1.111140466039201,-1.6629392246050927 L -1.2687865683272879,-1.5460209067254764 L -1.4142135623730925,-1.4142135623730978 L -1.5460209067254718,-1.2687865683272936 L -1.6629392246050887,-1.1111404660392072 L -1.7638425286967085,-0.9427934736519981 L -1.8477590650225724,-0.7653668647301822 L -1.913880671464417,-0.5805693545089273 L -1.9615705608064604,-0.39018064403225894 L -1.9903694533443936,-0.19603428065912343 L -2.0,-2.021286199229721e-15 L -1.9903694533443939,0.1960342806591194 L -1.9615705608064613,0.390180644032255 L -1.913880671464418,0.5805693545089234 L -1.847759065022574,0.7653668647301785 L -1.7638425286967105,0.9427934736519945 L -1.662939224605091,1.111140466039204 L -1.5460209067254742,1.2687865683272905 L -1.4142135623730954,1.414213562373095 L -1.2687865683272919,1.5460209067254733 L -1.111140466039206,1.6629392246050896 L -0.9427934736519974,1.763842528696709 L -0.7653668647301823,1.8477590650225724 L -0.5805693545089282,1.9138806714644168 L -0.3901806440322608,1.96157056080646 L -0.1960342806591262,1.9903694533443932 L -5.696464557944958e-15,2.0 L 0.19603428065911485,1.9903694533443943 L 0.3901806440322496,1.9615705608064622 L 0.5805693545089173,1.9138806714644199 L 0.7653668647301718,1.8477590650225768 L 0.9427934736519873,1.7638425286967143 L 1.1111404660391964,1.6629392246050958 L 1.268786568327283,1.5460209067254804 L 1.4142135623730872,1.414213562373103 L 1.5460209067254664,1.2687865683273 L 1.6629392246050836,1.1111404660392148 L 1.7638425286967039,0.9427934736520068 L 1.8477590650225681,0.7653668647301923 L 1.9138806714644134,0.5805693545089385 L 1.961570560806458,0.3901806440322714 L 1.9903694533443923,0.19603428065913694 L 2.0,1.6477070274261195e-14 L 2.0,0.0 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<shapely.geometry.polygon.Polygon at 0x2de26d1b190>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "radius = 2\n",
+    "circular_collector = geometry.Point(0, 0).buffer(radius)\n",
+    "circular_collector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
     "Note, the absolute dimensions do not matter, as the GCR parameter scales the distance between collectors according to the collector area.\n",
     "\n",
     "<br>\n",
@@ -263,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -293,10 +320,10 @@
     "\n",
     "Once the collector aperture has been determined, the field layout can be defined. It is important to specify the ground cover ratio (GCR), which is the ratio of the collector are to the ground area.\n",
     "\n",
-    "#### Neighbor oder\n",
+    "### Neighbor oder\n",
     "The neighbor order determines how many collectors to take into account - for a neighbor order of 1 the immidiate 8 collectors are considered, whereas for a neighbor order of 2, 24 shading collectors are considered. It is recommended to use atleast a neighbor order of 2.\n",
     "\n",
-    "#### Standard vs. custom field layouts\n",
+    "### Standard vs. custom field layouts\n",
     "It is possible to choose from four different standard field layouts: `square`, `diagonal`, `hexagon_e_w`, and `hexagon_n_s`.\n",
     "\n",
     "It is also possible to specify a custom layout using the keywords: `aspect ratio`, `offset`, `rotation`, and `gcr`. For a description of the layout parameters, see the paper by [Cumpston and Pye (2014)](https://doi.org/10.1016/j.solener.2014.06.012) or check out the function documentation."
@@ -304,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +349,7 @@
    ],
    "source": [
     "X, Y, tracker_distance, relative_azimuth = \\\n",
-    "    shading.generate_field_layout(\n",
+    "    two_axis_tracker_shading.generate_field_layout(\n",
     "        gcr=0.3,  # Change this parameter according to your desired density of collectors\n",
     "        neighbor_order=2,\n",
     "        layout_type='square',\n",
@@ -342,21 +369,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 8.97 s\n"
+      "Wall time: 24.4 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "df['shading_fraction'] = \\\n",
-    "    df.apply(lambda x: shading.two_axis_shading_fraction(\n",
+    "    df.apply(lambda x: two_axis_tracker_shading.shading_fraction(\n",
     "    solar_azimuth=x['azimuth'],\n",
     "    solar_elevation=x['elevation'],\n",
     "    collector_geometry=collector_geometry,\n",
@@ -378,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +445,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
