--- a/docs/source/notebooks/Barstow_data.ipynb
+++ b/docs/source/notebooks/Barstow_data.ipynb
@@ -610,7 +610,7 @@
     "\n",
     "# Calculate sunrise times\n",
     "days = pd.date_range(df.index[0], df.index[-1], tz=barstow.tz) # List of days for which to calculate sunrise/sunset\n",
-    "sunrise_sunset = barstow.get_sun_rise_set_transit(days)\n",
+    "sunrise_sunset = barstow.get_sun_rise_set_transit(days, method='spa')\n",
     "\n",
     "# Convert sunrise/sunset from Datetime to hours (decimal)\n",
     "sunrise_sunset['sunrise'] = sunrise_sunset['sunrise'].dt.hour + sunrise_sunset['sunrise'].dt.minute/60\n",
@@ -777,7 +777,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -791,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
