--- a/docs/source/notebooks/reference_dataset.ipynb
+++ b/docs/source/notebooks/reference_dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Referrence irradiance dataset\n",
+    "# Reference irradiance dataset\n",
     "\n",
     "This notebook documents the quality control and subsequent removal of erroneous data in the 1976 Barstow irradiance dataset, which has been adopted as the de-facto standard dataset for shading studies of two-axis tracking collectors.\n",
     "\n",
