Create neighbor order

--- a/docs/source/notebooks/intro_tutorial.ipynb
+++ b/docs/source/notebooks/intro_tutorial.ipynb
@@ -306,7 +306,7 @@
     "\n",
     "Once the collector aperture has been determined, the field layout can be defined. It is important to specify the ground cover ratio (GCR), which is the ratio of the collector are to the ground area.\n",
     "\n",
-    "### Neighbor orderder\n",
+    "### Neighbor order\n",
     "The neighbor order determines how many collectors to take into account - for a neighbor order of 1 the immidiate 8 collectors are considered, whereas for a neighbor order of 2, 24 shading collectors are considered. It is recommended to use atleast a neighbor order of 2.\n",
     "\n",
     "### Standard vs. custom field layouts\n",
