Minor doc update

--- a/docs/source/notebooks/intro_tutorial.ipynb
+++ b/docs/source/notebooks/intro_tutorial.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Intro tutorial\n",
     "\n",
-    "This document explains how to use the open-source code provided in this repository for calculating self-shading of two-axis tracking solar collectors.\n",
+    "This document explains how to use the package ``twoaxistracking`` for calculating self-shading of two-axis tracking solar collectors.\n",
     "\n",
     "Import necessary packages:"
    ]
@@ -49,7 +49,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "The second step involves generating the discrete time-steps for which shading shall be calculated. Generally the time series should cover one year (preferably not a leap year).\n",
+    "The second step involves deciding on the discrete time-steps for which shading shall be calculated. Generally the time series should cover one year (preferably not a leap year).\n",
     "\n",
     "The most **important parameter is the frequency**, e.g., '1min', '15min', '1hr'.\n",
     "\n",
