--- a/docs/source/notebooks/reference_dataset.ipynb
+++ b/docs/source/notebooks/reference_dataset.ipynb
@@ -52,12 +52,12 @@
    "metadata": {},
    "source": [
     "## Load the dataset\n",
-    "The original dataset is a fixed-width-file (fwf), whih can be conveniently parsed using the pandas `read_fwf` function:"
+    "The original dataset is a fixed-width-file (fwf), which can be conveniently parsed using the pandas `read_fwf` function:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4  76  1  1  1  15    0.88    0.00  -2.78"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
    "source": [
     "data_url = 'https://www.nrel.gov/grid/solar-resource/assets/data/f06.txt'\n",
     "\n",
-    "# Read file as a fixed-with-file (fwf)\n",
+    "# Read file\n",
     "df_barstow = pd.read_fwf(data_url, skiprows=[0,2])\n",
     "\n",
     "# Only keep data from 1976\n",
@@ -183,12 +183,12 @@
    "source": [
     "<br>\n",
     "\n",
-    "Next, we set the index to datetime:"
+    "Then, we set the index to datetime:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "hide-input"
@@ -265,14 +265,14 @@
        "1976-01-01 01:15:00-08:00    0.88    0.00  -2.78"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This step requires defining a custom function (*convert_to_datetime*) for converting\n",
-    "# the timestamps to datetime, as the time timestamps do not following the ISO convention\n",
+    "# This step requires defining a custom function (convert_to_datetime) for converting\n",
+    "# the timestamps to datetime, as the time timestamps do not follow the ISO convention\n",
     "# for denoting midnight as 00:00, but rather represents midnight as 24:00.\n",
     "def convert_to_datetime(time):\n",
     "    \"\"\"Convert string with instances of midnight as\n",
@@ -305,12 +305,12 @@
    "source": [
     "<br>\n",
     "\n",
-    "Next, the columns are renamed in order to conform to the standard pvlib names:"
+    "Next, the columns are renamed in order to conform to the [standard pvlib names](https://pvlib-python.readthedocs.io/en/stable/variables_style_rules.html):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "1976-01-01 01:15:00-08:00  0.88  0.00     -2.78"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        "1976-01-01 01:15:00-08:00         -3.212865  1413.981805  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,14 +559,14 @@
    "source": [
     "## Removal of erroneous data\n",
     "\n",
-    "The removal of erroneous data has been done by manually inspecting each day.\n",
+    "The identification of erroneous data has been done by manually inspecting each day.\n",
     "\n",
     "The identified erroneous values are set to nan:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,12 +632,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['dni_inplane'] = (df['dni'] * np.cos(np.deg2rad(df['apparent_zenith']))).clip(lower=0)\n",
-    "df['dhi'] = (df['ghi'] - df['dni_inplane']).clip(lower=0)\n",
+    "# Calculate beam/direct horizontal irradiance (BHI)\n",
+    "df['bhi'] = (df['dni'] * np.cos(np.deg2rad(df['apparent_zenith']))).clip(lower=0)\n",
+    "# Calculate diffuse horizontal irradiance (DHI)\n",
+    "df['dhi'] = (df['ghi'] - df['bhi']).clip(lower=0)\n",
     "\n",
     "# Calculate normalized irradiance values\n",
     "df['Kn'] = df['dni'] / df['dni_extra']\n",
@@ -661,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "hide-input"
@@ -722,12 +724,12 @@
     "\n",
     "In order to detect possible shading from nearby objects and hills, it is useful to visualize the maximum irradiance as a function of solar elevation and zenith angle. Particularly the DNI plot is helpful in identifiying the local obstruction free horizon line.\n",
     "\n",
-    "Due to the 15-minute resolution a 2-degree angle resolution is used."
+    "Due to the 15-minute resolution a 2-degree resolution is used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "hide-input"
@@ -740,7 +742,7 @@
        "Text(0.5, 1.0, 'Maximum irradiance as a function of solar elevation and azimuth')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -791,12 +793,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quality-check plots"
+    "### Quality-check plots\n",
+    "The below plots visualize the normalize irradiance values. The blue lines represents the [quality-control limits recommend by the BSRN](https://epic.awi.de/id/eprint/30083/1/BSRN_recommended_QC_tests_V2.pdf)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "tags": [
      "hide-input"
@@ -845,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +859,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clearly, the DNI measurements are errornous to a much higher degree than the GHI measurements. This can partly be due to the fact that it is much easier to detect a faulty DNI measurements, and also that the DNI sensor is much more prone to soiling and is affected by tracker errors and misalignment."
+    "Clearly, the DNI measurements are errornous to a much higher degree than the GHI measurements. This is partly due to the fact that it is much easier to detect a faulty DNI measurement, but also that DNI sensors are much more prone to soiling and affected by tracker errors and misalignment."
    ]
   },
   {
