--- a/docs/source/notebooks/field_layout_discretization.ipynb
+++ b/docs/source/notebooks/field_layout_discretization.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "source": [
     "## Visualization of layout discretization\n",
-    "The following plots illustrate the discrete aspect ratios and offsets for GCR=0.2 and GCR=0.3. Note, each point shown is simulated for the all discrete rotations."
+    "The following plot illustrates the discrete aspect ratios and offsets for GCR=0.2 and GCR=0.3. Note, each point shown is simulated for the all discrete rotations."
    ]
   },
   {
@@ -296,7 +296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
