--- a/docs/source/notebooks/validation.ipynb
+++ b/docs/source/notebooks/validation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Validation\n",
     "\n",
-    "This document shows how the shading calculations using the ``twoaxistracking`` package compares to values calculated with existing methods found in the literature. Specifically, the annual shading fraction is compared with the values presented in Cumpston and Pye (2014) for eight different field layouts. The paper utilized the algorithm presented in Meller (2010), which in turn has previously been compared to  compared to results from Pons & Dugan (1984).\n",
+    "This document shows how the shading calculations using the ``twoaxistracking`` package compares to values calculated with existing methods found in the literature. Specifically, the annual shading fraction is compared with the values presented in Cumpston and Pye (2014) for eight different field layouts. The reference study (Cumpston and Pye, 2014) utilized the algorithm developed by Meller (2010), which has previously been compared to results from Pons & Dugan (1984).\n",
     "\n",
     "Import necessary packages:"
    ]
@@ -29,7 +29,7 @@
    "source": [
     "## Definition of collector geometry\n",
     "\n",
-    "The study by Cumpston and Pye (2014) simulated shading for a circular aperture. The study made no distinction between gross and aperture area, the two geometries were assumed to be the same."
+    "The study by Cumpston and Pye (2014) simulated shading for a circular aperture. The study made no distinction between gross and aperture area, i.e., the two geometries were assumed to be the same."
    ]
   },
   {
@@ -51,7 +51,7 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-0.6093247502315768 -0.6093247502315768 1.2186495004631537 1.2186495004631537\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,0.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.024372990009263074\" opacity=\"0.6\" d=\"M 0.5641895835477563,0.0 L 0.5614728564942745,-0.055300249583076784 L 0.5533488389004679,-0.11006792753247706 L 0.539895769496805,-0.16377559117048995 L 0.5212432086958386,-0.21590600633668597 L 0.4975707908546091,-0.26595712863563087 L 0.4691064942975874,-0.3134469383988593 L 0.43612444576078485,-0.35791808279778053 L 0.3989422804014327,-0.3989422804014327 L 0.35791808279778053,-0.4361244457607848 L 0.31344693839885934,-0.4691064942975874 L 0.265957128635631,-0.49757079085460904 L 0.215906006336686,-0.5212432086958386 L 0.16377559117048995,-0.5398957694968051 L 0.11006792753247711,-0.5533488389004679 L 0.055300249583076874,-0.5614728564942744 L 3.4546648380201897e-17,-0.5641895835477563 L -0.055300249583076805,-0.5614728564942745 L -0.11006792753247703,-0.5533488389004679 L -0.16377559117048984,-0.5398957694968051 L -0.21590600633668594,-0.5212432086958386 L -0.2659571286356309,-0.4975707908546091 L -0.3134469383988591,-0.46910649429758744 L -0.3579180827977805,-0.4361244457607849 L -0.39894228040143265,-0.3989422804014327 L -0.43612444576078485,-0.35791808279778053 L -0.46910649429758744,-0.3134469383988593 L -0.49757079085460904,-0.265957128635631 L -0.5212432086958386,-0.21590600633668602 L -0.539895769496805,-0.16377559117048998 L -0.5533488389004679,-0.11006792753247727 L -0.5614728564942744,-0.05530024958307691 L -0.5641895835477563,-6.909329676040379e-17 L -0.5614728564942745,0.05530024958307678 L -0.5533488389004679,0.11006792753247713 L -0.5398957694968051,0.16377559117048981 L -0.5212432086958387,0.21590600633668589 L -0.4975707908546091,0.26595712863563087 L -0.4691064942975875,0.3134469383988591 L -0.4361244457607849,0.3579180827977804 L -0.39894228040143276,0.39894228040143265 L -0.3579180827977808,0.4361244457607847 L -0.3134469383988593,0.4691064942975874 L -0.265957128635631,0.49757079085460904 L -0.21590600633668627,0.5212432086958385 L -0.16377559117049,0.539895769496805 L -0.1100679275324773,0.5533488389004679 L -0.0553002495830767,0.5614728564942745 L -1.0363994514060568e-16,0.5641895835477563 L 0.05530024958307649,0.5614728564942745 L 0.1100679275324771,0.5533488389004679 L 0.1637755911704898,0.5398957694968051 L 0.21590600633668608,0.5212432086958385 L 0.26595712863563087,0.4975707908546091 L 0.31344693839885907,0.4691064942975875 L 0.35791808279778065,0.4361244457607848 L 0.3989422804014326,0.39894228040143276 L 0.43612444576078463,0.3579180827977808 L 0.4691064942975874,0.3134469383988593 L 0.497570790854609,0.26595712863563103 L 0.5212432086958385,0.2159060063366863 L 0.539895769496805,0.16377559117049004 L 0.5533488389004679,0.11006792753247734 L 0.5614728564942745,0.05530024958307673 L 0.5641895835477563,0.0 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x1ae066f3a48>"
+       "<shapely.geometry.polygon.Polygon at 0x290bc570e08>"
       ]
      },
      "execution_count": 2,
@@ -78,7 +78,7 @@
     "<br>\n",
     "\n",
     "## Reference dataset\n",
-    "The simulations carried out in the reference study utilize the 1976 irradiance dataset from Barstow as described in [Reference irradiance dataset](reference_dataset.ipynb) section.\n",
+    "The simulations carried out in the reference study were based on the 1976 irradiance dataset from Barstow as described in [Reference irradiance dataset](reference_dataset.ipynb) section.\n",
     "\n",
     "Load the quality controlled dataset:"
    ]
@@ -86,7 +86,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -269,15 +273,19 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Test cases\n",
+    "## Field layouts\n",
     "\n",
-    "Cumpston and Pye (2010) provided the annual shading fractions for the optimal layout for eight different ground coverage ratios (GCR). The field layout parameters and their annual shading fractions were:"
+    "Cumpston and Pye (2010) provided the annual shading fractions (ASF) for the optimal layout for eight different ground coverage ratios (GCR). The field layout parameters and their annual shading fractions were:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -424,12 +432,12 @@
    "source": [
     "<br>\n",
     "\n",
-    "To compare to these values, the annual shading fraction for the eight field layouts is therefore calculated using the `twoaxistracking` package:"
+    "For comparison the annual shading fraction for the eight field layouts is therefore calculated using the `twoaxistracking` package:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -439,9 +447,17 @@
       "C:\\Users\\arajen\\Documents\\GitHub\\twoaxistracking\\twoaxistracking\\layout.py:176: RuntimeWarning: invalid value encountered in arcsin\n",
       "  (tracker_distance * np.cos(delta_gamma_rad)))) + relative_slope\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 45.8 s\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
     "field_parameters = ['gcr', 'aspect_ratio', 'rotation', 'offset']\n",
     "\n",
     "for index, (gcr, aspect_ratio, rotation, offset) in dfc[field_parameters].iterrows():\n",
@@ -475,13 +491,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "hide-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asf_cumpston</th>\n",
+       "      <th>asf_twoaxistracking</th>\n",
+       "      <th>absolute_deviation</th>\n",
+       "      <th>percent_deviation</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gcr</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.1</th>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.2</th>\n",
+       "      <td>1.53</td>\n",
+       "      <td>1.51</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>-1.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.3</th>\n",
+       "      <td>4.50</td>\n",
+       "      <td>4.49</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>-0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.4</th>\n",
+       "      <td>8.14</td>\n",
+       "      <td>8.09</td>\n",
+       "      <td>-0.05</td>\n",
+       "      <td>-0.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.5</th>\n",
+       "      <td>12.40</td>\n",
+       "      <td>12.29</td>\n",
+       "      <td>-0.11</td>\n",
+       "      <td>-0.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.6</th>\n",
+       "      <td>17.20</td>\n",
+       "      <td>17.09</td>\n",
+       "      <td>-0.11</td>\n",
+       "      <td>-0.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.7</th>\n",
+       "      <td>22.30</td>\n",
+       "      <td>22.16</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>-0.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.8</th>\n",
+       "      <td>27.60</td>\n",
+       "      <td>27.36</td>\n",
+       "      <td>-0.24</td>\n",
+       "      <td>-0.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.9</th>\n",
+       "      <td>33.10</td>\n",
+       "      <td>32.87</td>\n",
+       "      <td>-0.23</td>\n",
+       "      <td>-0.69</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     asf_cumpston  asf_twoaxistracking  absolute_deviation  percent_deviation\n",
+       "gcr                                                                          \n",
+       "0.1          0.04                 0.04                0.00               0.00\n",
+       "0.2          1.53                 1.51               -0.02              -1.31\n",
+       "0.3          4.50                 4.49               -0.01              -0.22\n",
+       "0.4          8.14                 8.09               -0.05              -0.61\n",
+       "0.5         12.40                12.29               -0.11              -0.89\n",
+       "0.6         17.20                17.09               -0.11              -0.64\n",
+       "0.7         22.30                22.16               -0.14              -0.63\n",
+       "0.8         27.60                27.36               -0.24              -0.87\n",
+       "0.9         33.10                32.87               -0.23              -0.69"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dfc['absolute_deviation'] = (dfc['asf_twoaxistracking'] - dfc['asf_cumpston'])\n",
     "dfc['percent_deviation'] = (dfc['asf_twoaxistracking'] - dfc['asf_cumpston']).divide(dfc['asf_cumpston']).multiply(100)\n",
@@ -494,7 +631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the comparison above, it is evident that the relative differe between the annual shading difference is always lower than 1.3%. The existing differences are believed to be due to the difference in the quality control applied to reference data, i.e., no two methods will ever flag exactly the same values."
+    "Based on the comparison above, it is evident that the difference between the annual shading fractions is very low (always lower than 1.3%). The discrepancies are believed to be due to minor differences in the quality control procedure applied to reference data."
    ]
   },
   {
@@ -509,13 +646,6 @@
     "\n",
     "Pons, R.L., Dugan, A.F., 1984. The effect of concentrator field layout on the performance of point-focus distributed receiver systems. J. Sol. Energy Eng. Trans. ASME 106, 35–38. https://doi.org/10.1115/1.3267559"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -535,7 +665,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.12"
-  }
+  },
+  "mystnb": {"execution_timeout": 120}
  },
  "nbformat": 4,
  "nbformat_minor": 4
