Update validation table

--- a/docs/source/notebooks/validation.ipynb
+++ b/docs/source/notebooks/validation.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
     "\n",
     "    # Calculate annual shading loss\n",
     "    dfc.loc[index, 'asl_twoaxistracking'] = (df['shaded_fraction'].multiply(df['dni>10deg'], axis='rows').sum() / \n",
-    "        df['dni>10deg'].sum()).round(4)*100"
+    "        df['dni>10deg'].sum())*100"
    ]
   },
   {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {
     "tags": [
      "hide-input"
@@ -514,7 +514,7 @@
        "      <th>asl_cumpston</th>\n",
        "      <th>asl_twoaxistracking</th>\n",
        "      <th>absolute_deviation</th>\n",
-       "      <th>percent_deviation</th>\n",
+       "      <th>relative_deviation</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gcr</th>\n",
@@ -527,96 +527,100 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0.1</th>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.04 %</td>\n",
+       "      <td>0.04 %</td>\n",
+       "      <td>0.00 %</td>\n",
+       "      <td>0.00 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.2</th>\n",
-       "      <td>1.53</td>\n",
-       "      <td>1.51</td>\n",
-       "      <td>-0.02</td>\n",
-       "      <td>-1.31</td>\n",
+       "      <td>1.53 %</td>\n",
+       "      <td>1.51 %</td>\n",
+       "      <td>-0.02 %</td>\n",
+       "      <td>-1.31 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.3</th>\n",
-       "      <td>4.50</td>\n",
-       "      <td>4.49</td>\n",
-       "      <td>-0.01</td>\n",
-       "      <td>-0.22</td>\n",
+       "      <td>4.50 %</td>\n",
+       "      <td>4.49 %</td>\n",
+       "      <td>-0.01 %</td>\n",
+       "      <td>-0.22 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.4</th>\n",
-       "      <td>8.14</td>\n",
-       "      <td>8.09</td>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>-0.61</td>\n",
+       "      <td>8.14 %</td>\n",
+       "      <td>8.09 %</td>\n",
+       "      <td>-0.05 %</td>\n",
+       "      <td>-0.61 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.5</th>\n",
-       "      <td>12.40</td>\n",
-       "      <td>12.29</td>\n",
-       "      <td>-0.11</td>\n",
-       "      <td>-0.89</td>\n",
+       "      <td>12.40 %</td>\n",
+       "      <td>12.30 %</td>\n",
+       "      <td>-0.10 %</td>\n",
+       "      <td>-0.81 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.6</th>\n",
-       "      <td>17.20</td>\n",
-       "      <td>17.09</td>\n",
-       "      <td>-0.11</td>\n",
-       "      <td>-0.64</td>\n",
+       "      <td>17.20 %</td>\n",
+       "      <td>17.10 %</td>\n",
+       "      <td>-0.10 %</td>\n",
+       "      <td>-0.58 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.7</th>\n",
-       "      <td>22.30</td>\n",
-       "      <td>22.16</td>\n",
-       "      <td>-0.14</td>\n",
-       "      <td>-0.63</td>\n",
+       "      <td>22.30 %</td>\n",
+       "      <td>22.20 %</td>\n",
+       "      <td>-0.10 %</td>\n",
+       "      <td>-0.45 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.8</th>\n",
-       "      <td>27.60</td>\n",
-       "      <td>27.36</td>\n",
-       "      <td>-0.24</td>\n",
-       "      <td>-0.87</td>\n",
+       "      <td>27.60 %</td>\n",
+       "      <td>27.40 %</td>\n",
+       "      <td>-0.20 %</td>\n",
+       "      <td>-0.72 %</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0.9</th>\n",
-       "      <td>33.10</td>\n",
-       "      <td>32.87</td>\n",
-       "      <td>-0.23</td>\n",
-       "      <td>-0.69</td>\n",
+       "      <td>33.10 %</td>\n",
+       "      <td>32.90 %</td>\n",
+       "      <td>-0.20 %</td>\n",
+       "      <td>-0.60 %</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     asl_cumpston  asl_twoaxistracking  absolute_deviation  percent_deviation\n",
-       "gcr                                                                          \n",
-       "0.1          0.04                 0.04                0.00               0.00\n",
-       "0.2          1.53                 1.51               -0.02              -1.31\n",
-       "0.3          4.50                 4.49               -0.01              -0.22\n",
-       "0.4          8.14                 8.09               -0.05              -0.61\n",
-       "0.5         12.40                12.29               -0.11              -0.89\n",
-       "0.6         17.20                17.09               -0.11              -0.64\n",
-       "0.7         22.30                22.16               -0.14              -0.63\n",
-       "0.8         27.60                27.36               -0.24              -0.87\n",
-       "0.9         33.10                32.87               -0.23              -0.69"
+       "    asl_cumpston asl_twoaxistracking absolute_deviation relative_deviation\n",
+       "gcr                                                                       \n",
+       "0.1       0.04 %              0.04 %             0.00 %             0.00 %\n",
+       "0.2       1.53 %              1.51 %            -0.02 %            -1.31 %\n",
+       "0.3       4.50 %              4.49 %            -0.01 %            -0.22 %\n",
+       "0.4       8.14 %              8.09 %            -0.05 %            -0.61 %\n",
+       "0.5      12.40 %             12.30 %            -0.10 %            -0.81 %\n",
+       "0.6      17.20 %             17.10 %            -0.10 %            -0.58 %\n",
+       "0.7      22.30 %             22.20 %            -0.10 %            -0.45 %\n",
+       "0.8      27.60 %             27.40 %            -0.20 %            -0.72 %\n",
+       "0.9      33.10 %             32.90 %            -0.20 %            -0.60 %"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Limit asl_twoaxistracking to three significant figures\n",
+    "dfc['asl_twoaxistracking'] = dfc['asl_twoaxistracking'].apply(lambda s: f\"{s:.3g}\").astype(float)\n",
+    "# Calculate absolute and relatieve deviation\n",
     "dfc['absolute_deviation'] = (dfc['asl_twoaxistracking'] - dfc['asl_cumpston'])\n",
-    "dfc['percent_deviation'] = (dfc['asl_twoaxistracking'] - dfc['asl_cumpston']).divide(dfc['asl_cumpston']).multiply(100)\n",
+    "dfc['relative_deviation'] = (dfc['asl_twoaxistracking'] - dfc['asl_cumpston']).\\\n",
+    "    divide(dfc['asl_cumpston']).multiply(100)\n",
     "\n",
-    "result_columns = ['asl_cumpston', 'asl_twoaxistracking', 'absolute_deviation', 'percent_deviation']\n",
-    "dfc.set_index('gcr')[result_columns].round(2)"
+    "result_columns = ['asl_cumpston', 'asl_twoaxistracking', 'absolute_deviation', 'relative_deviation']\n",
+    "dfc.set_index('gcr')[result_columns].round(2).applymap(lambda s: f\"{s:.2f} %\")"
    ]
   },
   {
